@@ -1,6 +1,7 @@
 package uk.gov.mca.beacons.api.controllers;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import java.io.IOException;
 import java.nio.file.Files;
@@ -12,9 +13,11 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.reactive.AutoConfigureWebTestClient;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.reactive.server.WebTestClient;
 import org.springframework.web.reactive.function.BodyInserters;
+import uk.gov.mca.beacons.api.dto.DeleteBeaconRequestDTO;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @AutoConfigureWebTestClient
@@ -140,19 +143,7 @@ class AccountHolderControllerIntegrationTest {
     void shouldRespondWithTheListOfBeaconsForTheAccountHolder()
       throws Exception {
       final String createdAccountHolderId = createAccountHolder();
-
-      final String createBeaconRequest = readFile(
-        "src/test/resources/fixtures/createBeaconRequest.json"
-      )
-        .replace("account-holder-id-placeholder", createdAccountHolderId);
-      webTestClient
-        .post()
-        .uri("/registrations/register")
-        .bodyValue(createBeaconRequest)
-        .header(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-        .exchange()
-        .expectStatus()
-        .isCreated();
+      createBeacon(createdAccountHolderId);
 
       final String expectedResponse = readFile(
         "src/test/resources/fixtures/getBeaconsByAccountHolderResponse.json"
@@ -164,10 +155,71 @@ class AccountHolderControllerIntegrationTest {
         .expectBody()
         .json(expectedResponse);
     }
+
+    @Test
+    void shouldRespondWithAnEmptyListIfAllBeaconsHaveBeenDeletedFromTheAccount()
+      throws Exception {
+      final String createdAccountHolderId = createAccountHolder();
+      final String beaconId = createBeacon(createdAccountHolderId);
+      final var deleteBeaconRequest = DeleteBeaconRequestDTO
+        .builder()
+        .beaconId(UUID.fromString(beaconId))
+        .userId(UUID.fromString(createdAccountHolderId))
+        .reason("Not used on my boat")
+        .build();
+
+      webTestClient
+        .patch()
+        .uri("/beacons/" + beaconId + "/delete")
+        .body(BodyInserters.fromValue(deleteBeaconRequest))
+        .exchange()
+        .expectStatus()
+        .isOk();
+
+      final String expectedResponse = readFile(
+        "src/test/resources/fixtures/getBeaconsByAccountHolderEmptyResponse.json"
+      );
+      webTestClient
+        .get()
+        .uri("/account-holder/" + createdAccountHolderId + "/beacons")
+        .exchange()
+        .expectBody()
+        .json(expectedResponse);
+    }
+  }
+
+  @Nested
+  class UpdateAccountHolderIdByAuthId {
+
+    @Test
+    void shouldReturnTheUpdatedAccountHolderByAuthId() throws Exception {
+      final var authId = UUID.randomUUID().toString();
+      final var accountHolderId = createAccountHolder(authId);
+
+      String updateRequest = readFile(
+        "src/test/resources/fixtures/updateAccountHolderRequest.json"
+      )
+        .replace("replace-with-test-account-id", accountHolderId);
+      String expectedResponse = readFile(
+        "src/test/resources/fixtures/updateAccountHolderResponse.json"
+      )
+        .replace("replace-with-test-account-id", accountHolderId);
+
+      var response = webTestClient
+        .patch()
+        .uri("/account-holder/" + accountHolderId)
+        .body(BodyInserters.fromValue(updateRequest))
+        .header(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
+        .exchange()
+        .expectBody();
+
+      response.json(expectedResponse);
+      response.jsonPath("$.data.id").isNotEmpty();
+    }
   }
 
   private String readFile(String filePath) throws IOException {
-    return new String(Files.readAllBytes(Paths.get(filePath)));
+    return Files.readString(Paths.get(filePath));
   }
 
   private String createAccountHolder() throws Exception {
@@ -192,6 +244,32 @@ class AccountHolderControllerIntegrationTest {
     return new ObjectMapper()
       .readValue(createdAccountResponse, ObjectNode.class)
       .get("data")
+      .get("id")
+      .textValue();
+  }
+
+  private String createBeacon(String accountHolderId) throws Exception {
+    final String createBeaconRequest = readFile(
+      "src/test/resources/fixtures/createBeaconRequest.json"
+    )
+      .replace("account-holder-id-placeholder", accountHolderId);
+
+    final var responseBody = webTestClient
+      .post()
+      .uri("/registrations/register")
+      .bodyValue(createBeaconRequest)
+      .header(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
+      .exchange()
+      .expectStatus()
+      .isCreated()
+      .expectBody()
+      .returnResult()
+      .getResponseBody();
+
+    return new ObjectMapper()
+      .readValue(responseBody, ObjectNode.class)
+      .get("beacons")
+      .get(0)
       .get("id")
       .textValue();
   }
